change to package.json
add android platform

--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
       "platform": "ios",
       "version": "",
       "locator": "ios"
+    },
+    {
+      "platform": "android",
+      "version": "",
+      "locator": "android"
     }
   ],
   "name": "quizapp",
