--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env: CXX=g++-4.8
 cache:
   directories:
     - node_modules
+    - $(npm config get prefix)/bin/cordova
+    - $(npm config get prefix)/bin/ionic
 install:
 - npm install -g cordova ionic@beta
 - npm install
