Add cordova-custom-config and add permissions
Add ACCESS_WIFI_STATE, ACCESS_NETWORK_STATE and INTERNET Permissions
closes #6

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "ionic-plugin-keyboard",
     "cordova-plugin-inappbrowser",
     "cordova-plugin-geolocation",
-    "cordova-plugin-compat"
+    "cordova-plugin-compat",
+    "cordova-custom-config"
   ],
   "cordovaPlatforms": [
     {
