--- a/package.json
+++ b/package.json
@@ -38,7 +38,15 @@
     "cordova-plugin-inappbrowser",
     "cordova-plugin-geolocation",
     "cordova-plugin-compat",
-    "cordova-custom-config"
+    "cordova-custom-config",
+    {
+      "id": "cordova-plugin-facebook4",
+      "locator": "cordova-plugin-facebook4",
+      "variables": {
+        "APP_ID": "1716571461939874",
+        "APP_NAME": "BloodApp"
+      }
+    }
   ],
   "cordovaPlatforms": [
     {
