--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "dependencies": {
-    "@angular/common": "2.0.0-rc.3",
-    "@angular/compiler": "2.0.0-rc.3",
-    "@angular/core": "2.0.0-rc.3",
-    "@angular/http": "2.0.0-rc.3",
-    "@angular/platform-browser": "2.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
+    "@angular/common": "^2.0.0-rc.4",
+    "@angular/compiler": "^2.0.0-rc.4",
+    "@angular/core": "^2.0.0-rc.4",
+    "@angular/forms": "^0.2.0",
+    "@angular/http": "^2.0.0-rc.4",
+    "@angular/platform-browser": "^2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "angularfire2": "^2.0.0-beta.2",
     "es6-shim": "^0.35.0",
     "firebase": "^3.2.0",
-    "ionic-angular": "2.0.0-beta.10",
-    "ionic-native": "1.3.2",
+    "ionic-angular": "^2.0.0-beta.11",
+    "ionic-native": "1.3.10",
     "ionicons": "3.0.0",
     "moment": "^2.13.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "^5.0.0-beta.6",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
@@ -26,6 +27,8 @@
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
     "ionic-gulp-scripts-copy": "^2.0.0",
+    "ionic-gulp-tslint": "^1.0.0",
+    "tslint-ionic-rules": "^0.0.3",
     "run-sequence": "1.1.5"
   },
   "cordovaPlugins": [
