--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
 {
+  "name": "PocketBlood",
+  "author": "Mitchell Hamilton",
+  "homepage": "http://bloodapp.mitchellhamilton.me",
+  "private": true,
+  "scripts": {
+    "build": "ionic-app-scripts build",
+    "watch": "ionic-app-scripts watch",
+    "serve:before": "watch",
+    "emulate:before": "build",
+    "deploy:before": "build",
+    "build:before": "build",
+    "run:before": "build"
+  },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "es6-shim": "0.35.0",
-    "ionic-angular": "2.0.0-beta.11",
-    "ionic-native": "1.3.10",
-    "ionicons": "3.0.0",
-    "moment": "2.13.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "@ionic/storage": "^1.0.3",
+    "ionic-angular": "^2.0.0-rc.0",
+    "ionic-native": "^2.0.3",
+    "ionicons": "^3.0.0",
+    "moment": "^2.15.1"
   },
   "devDependencies": {
-    "del": "2.2.0",
-    "gulp": "3.9.1",
-    "gulp-watch": "4.3.5",
-    "ionic-gulp-browserify-typescript": "2.0.0",
-    "ionic-gulp-fonts-copy": "^1.0.0",
-    "ionic-gulp-html-copy": "^1.0.0",
-    "ionic-gulp-sass-build": "^1.0.0",
-    "ionic-gulp-scripts-copy": "^2.0.0",
-    "ionic-gulp-tslint": "^1.0.0",
-    "tslint-ionic-rules": "^0.0.3",
-    "run-sequence": "1.1.5"
+    "@ionic/app-scripts": "^0.0.23",
+    "@types/moment": "2.13.0",
+    "typescript": "^2.0.3"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
@@ -35,19 +30,7 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-inappbrowser",
-    "cordova-plugin-geolocation",
-    "cordova-plugin-compat",
-    "cordova-custom-config"
+    "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": [
-    {
-      "platform": "android",
-      "version": "",
-      "locator": "android"
-    }
-  ],
-  "name": "Pocket Blood",
   "description": "An App For Blood Donors"
 }
